Update find and replace string workflow.yml

--- a/.github/workflows/find and replace string workflow.yml
+++ b/.github/workflows/find and replace string workflow.yml
@@ -1,4 +1,4 @@
-name: My Workflow
+name: Find and Replace workflow
 on: [push, pull_request]
 jobs:
   build:
@@ -14,8 +14,8 @@ jobs:
       run: |
           git config --local user.email "test@github.com"
           git config --local user.name "GitHub Action test"
-          git add ./output
-          git commit -m "Add changes"
+          git add -A
+          git commit -m "Add changes replace hello to world"
     - name: Push changes # push the output folder to your repo
       uses: ad-m/github-push-action@master
       with:
