--- a/.github/workflows/find and replace string workflow.yml
+++ b/.github/workflows/find and replace string workflow.yml
@@ -8,8 +8,8 @@ jobs:
     - name: Find and Replace
       uses: shitiomatic/str-replace@master
       with:
-        find: "hello"
-        replace: "world"
+        find: "\s\sspec.version\s*=\s"\d+.\d+.\d+""
+        replace: "  spec.version = "1.1.7.1"
     - name: Commit files # commit the output folder
       run: |
           git config --local user.email "uy.nguyen@wonderlabs.io"
