--- a/.github/workflows/find and replace string workflow.yml
+++ b/.github/workflows/find and replace string workflow.yml
@@ -9,6 +9,9 @@ jobs:
     - name: Get branch name
       uses: ypicard/get-branch-name-github-action@v1
       id: get-branch
+    - name: Check and get release version only
+      run: |
+        steps.get-branch.outputs.branch = $(echo ${{steps.get-branch.outputs.branch}}|grep -P '\\d+.\\d+.\\d+' -o)
     - name: Find and replace spec version
       uses: shitiomatic/str-replace@master
       with:
