Update find and replace string workflow.yml

--- a/.github/workflows/find and replace string workflow.yml
+++ b/.github/workflows/find and replace string workflow.yml
@@ -7,12 +7,13 @@ jobs:
     - name: Checkout
       uses: actions/checkout@master
     - name: Get branch name
-      uses: ypicard/get-branch-name-github-action@v1
+      uses: uynguyen-wonderlabs/get-branch-name-github-action@v1
       id: get-branch
     - name: Print branch name
       run: echo "steps.get-branch.outputs.branch"
     - name: Check and get release version only
       id: get-release-version
+      if: steps.get-branch.outputs.is_release_branch == true
       run: |
         echo steps.get-branch.outputs.branch
         version=$(echo steps.get-branch.outputs.branch | sed -e "s/release\///g")
