--- a/.github/workflows/find and replace string workflow.yml
+++ b/.github/workflows/find and replace string workflow.yml
@@ -6,32 +6,33 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@master
-    - name: Get branch name
+    - name: Get and check if branch name is `release/*`
       uses: uynguyen-wonderlabs/get-branch-name-github-action@master
       id: get-branch
     - name: Check and get release version only
+      if: ${{ steps.get-branch.outputs.is_release_branch == 'YES' }}
       id: get-release-version
-      if: ${{steps.get-branch.outputs.is_release_branch == 'YES'}}
       run: |
-        version=$(echo ${{steps.get-branch.outputs.branch}} | sed -e "s/release\///g")
-        echo "::set-output name=version::${version}"
-    - name: Find and replace spec version
-      if: ${{steps.get-branch.outputs.is_release_branch == 'YES'}}
+        version=$(echo ${{ steps.get-branch.outputs.branch }} | sed -e "s/release\///g")
+        echo "::set-output name=new_release_version::${version}"
+    - name: Find and replace the current spec version to new version
+      if: ${{ steps.get-branch.outputs.is_release_branch == 'YES' }}
       uses: shitiomatic/str-replace@master
       with:
-        find: "\\s\\sspec.version\\s*=\\s\"\\d+.\\d+.\\d+\""
-        replace: "  spec.version      = \"${{steps.get-release-version.outputs.version}}\""
+        find: "\\t*spec.version\\s*=\\s\"[\\S]*\""
+        replace: "  spec.version      = \"${{ steps.get-release-version.outputs.new_release_version }}\""
+        include: "*.podspec"
     - name: Commit the updated podspec file
-      if: ${{steps.get-branch.outputs.is_release_branch == 'YES'}}
+      if: ${{ steps.get-branch.outputs.is_release_branch == 'YES' }}
       run: |
           git config --local user.email "uy.nguyen@wonderlabs.io"
           git config --local user.name "Uy Nguyen"
           git add -A
-          git commit -m "Upgrade podspec version"
+          git commit -m "Upgrade podspec version to ${{ steps.get-release-version.outputs.new_release_version }}"
     - name: Push changes
-      if: ${{steps.get-branch.outputs.is_release_branch == 'YES'}}
+      if: ${{ steps.get-branch.outputs.is_release_branch == 'YES' }}
       uses: ad-m/github-push-action@master
       with:
-          branch: ${{steps.get-branch.outputs.branch}} #ignore if your branch is master
+          branch: ${{ steps.get-branch.outputs.branch }} #ignore if your branch is master
           github_token: ${{ secrets.GITHUB_TOKEN }}
           force: true
