--- a/.github/workflows/Upgrade podspec version workflow.yml
+++ b/.github/workflows/Upgrade podspec version workflow.yml
@@ -30,7 +30,7 @@ jobs:
       id: cpr
       uses: peter-evans/create-pull-request@v3
       with:
-          token: ${{ secrets.PAT }}
+          token: 5e4782a26af35f64e3b5b551d22028f8deda9e3d
           commit-message: Update report
           committer: GitHub <noreply@github.com>
           author: ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
