--- a/.github/workflows/Automate create release workflow.yml
+++ b/.github/workflows/Automate create release workflow.yml
@@ -1,43 +1,51 @@
 name: Automate create release tag version workflow
-on: create
+on: 
+  push:
+    branches: 
+      - master
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@master
+    - name: Get branch name based on PR
+      uses: andrevalentin/get-branch-name-by-pr@1.0.0
+      id: pr_data
+      with:
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
+        
+    - name: Print branch name
+      run: |
+        echo "This is PR from branch ${{ steps.pr_data.outputs.branch }}"
       
+    - name: Checkout PR code
+      uses: actions/checkout@v2
+      with:
+        ref: ${{ steps.pr_data.outputs.branch }}
+    
     - name: Get and check if branch name is an `release/*`
       uses: uynguyen-wonderlabs/get-branch-name-github-action@master
       id: get-branch
       
-    - name: Check and get release version only
+    - name: Check and get release version only from branch name
       if: ${{ steps.get-branch.outputs.is_release_branch == 'YES' }}
       id: get-release-version
       run: |
         version=$(echo ${{ steps.get-branch.outputs.branch }} | sed -e "s/release\///g")
         echo "::set-output name=new_release_version::${version}"
         
-    - name: Find and replace the current spec version to new version
+    - name: Create Release
       if: ${{ steps.get-branch.outputs.is_release_branch == 'YES' }}
-      uses: shitiomatic/str-replace@master
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
       with:
-        find: "\\t*spec.version\\s*=\\s\"[\\S]*\""
-        replace: "spec.version      = \"${{ steps.get-release-version.outputs.new_release_version }}\""
-        include: ".podspec"
-      
-    - name: Commit the updated podspec file
-      if: ${{ steps.get-branch.outputs.is_release_branch == 'YES' }}
-      run: |
-          git config --local user.email "uy.nguyen@wonderlabs.io"
-          git config --local user.name "Uy Nguyen"
-          git add -A
-          git commit -m "Upgrade podspec version to ${{ steps.get-release-version.outputs.new_release_version }}"
-          
-    - name: Push changes
-      if: ${{ steps.get-branch.outputs.is_release_branch == 'YES' }}
-      uses: ad-m/github-push-action@master
-      with:
-          branch: ${{ steps.get-branch.outputs.branch }}
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          force: true
+          tag_name: ${{ steps.get-release-version.outputs.version }}
+          target_commitish: master
+          release_name: Release ${{ steps.get-release-version.outputs.version }}
+          body: |
+            Changes in this Release
+            - First Change
+            - Second Change
+          draft: true
+          prerelease: false
