--- a/.github/workflows/Automate create release workflow.yml
+++ b/.github/workflows/Automate create release workflow.yml
@@ -1,8 +1,10 @@
 name: Automate create release tag version workflow
 on: 
-  push:
+  pull_request:
     branches: 
       - master
+    types:
+      - closed
 jobs:
   build:
     runs-on: ubuntu-latest
