--- a/.github/workflows/Automate create release workflow.yml
+++ b/.github/workflows/Automate create release workflow.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Get branch name based on PR
-      uses: andrevalentin/get-branch-name-by-pr@1.0.0
+      uses: andrevalentin/get-branch-name-by-pr@master
       id: pr_data
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
