--- a/.github/workflows/Automate create release workflow.yml
+++ b/.github/workflows/Automate create release workflow.yml
@@ -24,10 +24,8 @@ jobs:
       id: get-version
       run: |
         version=$(echo ${{ steps.pr_data.outputs.branch }} | sed -e "s/release\///g")
+        is_release_branch="NO"
         echo "The version = ${{ version }}"
-        if [ "release/${version}" == ${{ steps.pr_data.outputs.branch }} ]; then is_release_branch='YES'; else is_release_branch=NO; fi
-        echo "::set-output name=is_release_branch::${is_release_branch}"
-        echo "::set-output name=release_version::${version}"
         
     - name: Print branch name
       run: |
