--- a/.github/workflows/Auto PR and merged workflow.yml
+++ b/.github/workflows/Auto PR and merged workflow.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Reset promotion branch
         run: |
-          git fetch origin ${github.ref}
+          git fetch origin master:master
           git reset --hard master
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
