--- a/.github/workflows/Auto PR and merged workflow.yml
+++ b/.github/workflows/Auto PR and merged workflow.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - release/2.0.0
 jobs:
-  Auto PR and merged release branch:
+  AutoPRandMerged:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
