--- a/.github/workflows/Auto PR and merged workflow.yml
+++ b/.github/workflows/Auto PR and merged workflow.yml
@@ -8,10 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Reset promotion branch
-        run: |
-          git fetch origin master:master
-          git reset --hard master
+        with:
+          ref: ${{github.ref}}
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
