--- a/.github/workflows/Auto PR and merged workflow.yml
+++ b/.github/workflows/Auto PR and merged workflow.yml
@@ -13,6 +13,7 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
-          branch: master
+          branch: ${{github.ref}}
+          base: master
           
           
