Update Auto PR and merged workflow.yml

--- a/.github/workflows/Auto PR and merged workflow.yml
+++ b/.github/workflows/Auto PR and merged workflow.yml
@@ -14,8 +14,8 @@ jobs:
         uses: peter-evans/create-pull-request@v3
         id: create_pr
         with:
-          committer: dependabot@sph.com.sg
-          author: Dependabot<dependabot@sph.com.sg>
+          committer: uynguyen-wonderlabs
+          author: Dependabot<uynguyen-wonderlabs@sph.com.sg>
           branch: ${{github.ref}}
           base: master
       - name: Auto approve
