--- a/.github/workflows/Auto PR and merged workflow.yml
+++ b/.github/workflows/Auto PR and merged workflow.yml
@@ -18,7 +18,7 @@ jobs:
           author: Dependabot<uynguyen-wonderlabs@sph.com.sg>
           branch: ${{github.ref}}
           base: master
-      - name: Auto approve
+      - name: Auto approves
         uses: hmarr/auto-approve-action@v2.0.0
         if: github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]'
         with:
