Update Auto PR and merged workflow.yml

--- a/.github/workflows/Auto PR and merged workflow.yml
+++ b/.github/workflows/Auto PR and merged workflow.yml
@@ -15,7 +15,7 @@ jobs:
         id: create_pr
         with:
           committer: uy.nguyen@wonderlabs.io
-          author: dependabot
+          author: dependabot<uy.nguyen@wonderlabs.io>
           branch: ${{github.ref}}
           base: master
       - name: Auto approves
