Update Auto PR and merged workflow.yml

--- a/.github/workflows/Auto PR and merged workflow.yml
+++ b/.github/workflows/Auto PR and merged workflow.yml
@@ -18,7 +18,7 @@ jobs:
           base: master
       - name: Auto approves
         uses: hmarr/auto-approve-action@v2.0.0
-        if: github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]'
+#         if: github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]'
         with:
           github-token: "${{ secrets.GITHUB_TOKEN }}"
       - name: Auto merge approved PR
@@ -27,6 +27,6 @@ jobs:
           token: ${{ secrets.MY_GITHUB_TOKEN }}
           merge-method: rebase
           do-not-merge-labels: never-merge
-          pull-request: ${{ github.event.inputs.pull-request }}
+          pull-request: ${{ steps.create_pr.output.pull-request-number }}
           dry-run: true
           
