--- a/.github/workflows/Auto PR and merged workflow.yml
+++ b/.github/workflows/Auto PR and merged workflow.yml
@@ -21,6 +21,7 @@ jobs:
 #         if: github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]'
         with:
           github-token: "${{ secrets.GITHUB_TOKEN }}"
+          pull-request: ${{ steps.create_pr.output.pull-request-number }}
       - name: Auto merge approved PR
         uses: reitermarkus/automerge@v1
         with:
