--- a/.github/workflows/auto approve and merge pr.yml
+++ b/.github/workflows/auto approve and merge pr.yml
@@ -1,13 +1,25 @@
 name: Auto approve
 
 on:
-  pull_request
+  pull_request:
+    branches:
+      - master
 
 jobs:
   auto-approve:
     runs-on: ubuntu-latest
     steps:
-    - uses: hmarr/auto-approve-action@v2.0.0
-##    if: github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]'
-      with:
-        github-token: "${{ secrets.GITHUB_TOKEN }}"
+      - name: Auto approves
+        uses: hmarr/auto-approve-action@v2.0.0
+#         if: github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]'
+        with:
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
+      - name: Auto merge approved PR
+        uses: reitermarkus/automerge@v1
+        with:
+          token: ${{ secrets.MY_GITHUB_TOKEN }}
+          merge-method: rebase
+          do-not-merge-labels: never-merge
+          pull-request: ${{ github.event.pull_request.number }}
+          dry-run: true
+          
