--- a/.github/workflows/auto approve and merge pr.yml
+++ b/.github/workflows/auto approve and merge pr.yml
@@ -13,7 +13,7 @@ jobs:
 #         uses: hmarr/auto-approve-action@v2.0.0
 # #         if: github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]'
 #         with:
-#           github-token: "${{ secrets.GITHUB_TOKEN }}"
+#           github-token: "${{ secrets.GITHUB_TOKEN }}".  
       - name: Merge approved PR
         uses: reitermarkus/automerge@v1
         with:
