--- a/.github/workflows/auto approve and merge pr.yml
+++ b/.github/workflows/auto approve and merge pr.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Merge approved PR
         uses: reitermarkus/automerge@v1
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: 5e4782a26af35f64e3b5b551d22028f8deda9e3d ##${{ secrets.GITHUB_TOKEN }}
           merge-method: rebase
           do-not-merge-labels: never-merge
           pull-request: ${{ github.event.pull_request.number }}
