--- a/.github/workflows/Auto approve and merge pr.yml
+++ b/.github/workflows/Auto approve and merge pr.yml
@@ -9,11 +9,12 @@ jobs:
   auto-approve:
     runs-on: ubuntu-latest
     steps:
-#       - name: Auto approves
-#         uses: hmarr/auto-approve-action@v2.0.0
-# #         if: github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]'
-#         with:
-#           github-token: "${{ secrets.GITHUB_TOKEN }}". 
+      - name: Auto approve
+        uses: hmarr/auto-approve-action@v2.0.0
+#         if: github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]'
+        with:
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
+      
       - name: Merge approved PR
         uses: reitermarkus/automerge@v1
         with:
