--- a/.github/workflows/Auto approve and merge pr.yml
+++ b/.github/workflows/Auto approve and merge pr.yml
@@ -1,4 +1,4 @@
-name: Auto Approve
+name: Auto Approve and Merge
 
 on:
   pull_request
@@ -9,10 +9,11 @@ jobs:
   auto-approve:
     runs-on: ubuntu-latest
     steps:
-#       - name: Auto approve
-#         uses: hmarr/auto-approve-action@v2.0.0
-# #         if: github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]'
-#         with:
+      - name: Auto approve
+        uses: hmarr/auto-approve-action@v2.0.0
+#         if: github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]'
+        with:
+          token: ${{ secrets.UY_SECRET }}
 #           github-token: "${{ secrets.GITHUB_TOKEN }}"
       
       - name: Merge approved PR
