Update Auto Upgrade Podspec Version workflows.yml

--- a/.github/workflows/Auto Upgrade Podspec Version workflows.yml
+++ b/.github/workflows/Auto Upgrade Podspec Version workflows.yml
@@ -20,7 +20,7 @@ jobs:
         
     - name: Create bot branch
       if: ${{ steps.get-branch.outputs.is_release_branch =='YES' }}
-      id: create_branch
+      id: create_bot_branch
       run: |
           bot_branch="bot/${{ steps.get-branch.outputs.branch }}"
           echo "::set-output name=bot_branch::${bot_branch}"
@@ -30,9 +30,14 @@ jobs:
       if: ${{ steps.get-branch.outputs.is_release_branch == 'YES' }}
       uses: ad-m/github-push-action@master
       with:
-          branch: ${{ steps.create_branch.outputs.bot_branch }}
+          branch: ${{ steps.create_bot_branch.outputs.bot_branch }}
           github_token: ${{ secrets.GITHUB_TOKEN }}
           force: true
+          
+    - name: Checkout bot branch
+      uses: actions/checkout@master
+      with:
+        ref: ${{ steps.create_bot_branch.outputs.bot_branch }}
           
     - name: Find and replace the current spec version to new version
       if: ${{ steps.get-branch.outputs.is_release_branch == 'YES' }}
@@ -49,12 +54,13 @@ jobs:
           git config --local user.name "Uy Nguyen"
           git add -A
           git commit -m "Upgrade podspec version to ${{ steps.get-release-version.outputs.new_release_version }}"
+          git status
           
     - name: Push changes
       if: ${{ steps.get-branch.outputs.is_release_branch == 'YES' }}
       uses: ad-m/github-push-action@master
       with:
-          branch: ${{ steps.create_branch.outputs.bot_branch }}
+          branch: ${{ steps.create_bot_branch.outputs.bot_branch }}
           github_token: ${{ secrets.GITHUB_TOKEN }}
           force: true
       
