Update Auto Upgrade Podspec Version workflows.yml

--- a/.github/workflows/Auto Upgrade Podspec Version workflows.yml
+++ b/.github/workflows/Auto Upgrade Podspec Version workflows.yml
@@ -64,16 +64,9 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           force: true
       
-#     - uses: actions-go/push@master
-#       if: ${{ steps.get-branch.outputs.is_release_branch == 'YES' }}
-#       with:
-#         commit-message: '[Auto] update pre-puilt dist packages'
-#         remote: origin
-#         ref: ${{ steps.create_branch.outputs.bot_branch }}
-#         remote-ref: ${{ steps.create_branch.outputs.bot_branch }} 
-      
     - name: Create Pull Request
       uses: peter-evans/create-pull-request@v3
       with:
-          branch: ${{ steps.create_branch.outputs.bot_branch }}
+          branch: ${{ steps.create_bot_branch.outputs.bot_branch }}
           base: ${{ steps.get-branch.outputs.branch}}
+          delete-branch: true
