--- a/.github/workflows/Auto Upgrade Podspec Version workflows.yml
+++ b/.github/workflows/Auto Upgrade Podspec Version workflows.yml
@@ -55,7 +55,7 @@ jobs:
           git add -A
           git commit -m "Upgrade podspec version to ${{ steps.get-release-version.outputs.new_release_version }}"
           git status
-          remote_repo="https://${{secrets.GITHUB_ACTOR}}:${{secrets.GITHUB_TOKEN}}@github.com/${{secrets.GITHUB_REPOSITORY}}.git"
+          remote_repo="https://${{GITHUB_ACTOR}}:${{secrets.GITHUB_TOKEN}}@github.com/${{GITHUB_REPOSITORY}}.git"
           git push "${remote_repo}" HEAD:${{ steps.create_bot_branch.outputs.bot_branch }} --follow-tags --force;
           
 #     - name: Push changes
